--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
       </footer>
     
-      <p  class="copywright"> <a href="https://github.com/owoadehabeeb04">Habeebdev_</a> || Copyright © 2023.</p>
+      <!-- <p  class="copywright"> <a href="https://github.com/owoadehabeeb04">Habeebdev_</a> || Copyright © 2023.</p> -->
     </div>
     <script src="script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
